Base text completed, need to run through verifier

--- a/Lab2/syllabus.html
+++ b/Lab2/syllabus.html
@@ -4,89 +4,168 @@
         <title>CST 465 Course Syllabus</title>
     </head>
     <body>
-        <h1><strong>CST 465 Syllabus</strong></h1>
-        <table width="100%">
-            <tr>
-                <td align="left">CST 465</td>
-                <td>Section 1</td>
-                <td colspan="2" align="left">Web Development with ASP.NET (3 credits)</td>
-            </tr>
-            <tr>
-                <th align="left">Lecture</th>
-                <td>5:30 p.m. - 6:20 p.m.</td>
-                <td>M W</td>
-                <td>Remote</td>
-            </tr>
-            <tr>
-                <th align="left">Lab</th>
-                <td>6:00 p.m. - 8:50 p.m.</td>
-                <td>R</td>
-                <td>Remote</td>
-            </tr>
-        </table>
-        <table width="100%"">
-            <tr>
-                <td>Instructor: </td>
-                <td>Alan Wallace</td>
-                <td>885-1715</td>
-                <td>alan.wallace@oit.edu</td>
-            </tr>
-            <tr>
-                <td>Office Hours:</td>
-                <td colspan="3">By appointment only</td>
-            </tr>
-        </table>
-        <br>
-        <h2>Course Materials:</h2>
-        <p>Course materials will be made available via Canvas</p>
-        <br>
-        <h2>Catalog Description:</h2>
-        <p>
-            Dynamic web site creation and development strategies using ASP.NET are
-            discussed and practiced. Focus on the importance of databases in the creation of a
-            dynamic web site is heavily emphasized.
-            <br><br>
-            Pre- or corequisites: CST 324 and CST 356 or instructor's consent.
-        </p>
-        <br>
-        <h2>Textbook:</h2>
-        <p>
-            Texts Available Free Online to Students via O'Reilly for Higher Education <br>
-            <a href="https://www.oit.edu/library/find/a-z">https://www.oit.edu/library/find/a-z</a><br>
-        </p>
-        <table width="100%">
-            <tr>
-                <td colspan="2">Pro ASP.NET Core 7, Tenth Edition</td>
-            </tr>
-            <tr>
-                <td>Author: Adam Freeman</td>
-                <td>ISBN: 9781633437821</td>
-            </tr>
-            <tr>
-                <td colspan="2"><br>HTML & CSS: Design and Build Websites</td>
-            </tr>
-            <tr>
-                <td>Author: Jon Duckett</td>
-                <td>ISBN: 9781118008188</td>
-            </tr>
-            <tr>
-                <td colspan="2"><br>Don't Make Me Think!: A Common Sense Approach to Web Usability, Second Edition</td>
-            </tr>
-            <tr>
-                <td>Author: Steve Krug</td>
-                <td>ISBN: 9780321344755</td>
-            </tr>
-        </table>
-        <br>
-        <h2>Objectives:</h2>
-        <p>
-            Upon completion of this course students should be able to:
-            <ol>
-                <li>Design and implement web sites using ASP.NET and HTML 5</li>
-                <li>Understand the MVC design pattern</li>
-                <li>Connect to a database.</li>
-                <li>Create extensible and maintainable web sites.</li>
-            </ol>
-        </p>
+        <section name="class_info">
+            <h1 ><strong>CST 465 Syllabus</strong></h1>
+            <table width="100%">
+                <tr>
+                    <td align="left">CST 465</td>
+                    <td>Section 1</td>
+                    <td colspan="2">Web Development with ASP.NET (3 credits)</td>
+                </tr>
+                <tr>
+                    <th align="left">Lecture</th>
+                    <td>5:30 p.m. - 6:20 p.m.</td>
+                    <td>M W</td>
+                    <td>Remote</td>
+                </tr>
+                <tr>
+                    <th align="left">Lab</th>
+                    <td>6:00 p.m. - 8:50 p.m.</td>
+                    <td>R</td>
+                    <td>Remote</td>
+                </tr>
+            </table>
+            <table width="100%">
+                <tr>
+                    <td>Instructor: </td>
+                    <td>Alan Wallace</td>
+                    <td>885-1715</td>
+                    <td>alan.wallace@oit.edu</td>
+                </tr>
+                <tr>
+                    <td>Office Hours:</td>
+                    <td colspan="3">By appointment only</td>
+                </tr>
+            </table>
+            <br>
+        </section>
+        <section name="course_materials">
+            <h2>Course Materials:</h2>
+            <p>Course materials will be made available via Canvas</p>
+            <br>
+            <h2>Catalog Description:</h2>
+            <p>
+                Dynamic web site creation and development strategies using ASP.NET are
+                discussed and practiced. Focus on the importance of databases in the creation of a
+                dynamic web site is heavily emphasized.
+                <br><br>
+                Pre- or corequisites: CST 324 and CST 356 or instructor's consent.
+            </p>
+            <br>
+        </section>
+        <section name="textbook">
+            <h2>Textbook:</h2>
+            <p>
+                Texts Available Free Online to Students via O'Reilly for Higher Education <br>
+                <a href="https://www.oit.edu/library/find/a-z">https://www.oit.edu/library/find/a-z</a><br>
+            </p>
+            <table width="100%">
+                <tr>
+                    <td colspan="2">Pro ASP.NET Core 7, Tenth Edition</td>
+                </tr>
+                <tr>
+                    <td>Author: Adam Freeman</td>
+                    <td>ISBN: 9781633437821</td>
+                </tr>
+                <tr>
+                    <td colspan="2"><br>HTML &amp; CSS: Design and Build Websites</td>
+                </tr>
+                <tr>
+                    <td>Author: Jon Duckett</td>
+                    <td>ISBN: 9781118008188</td>
+                </tr>
+                <tr>
+                    <td colspan="2"><br>Don't Make Me Think!: A Common Sense Approach to Web Usability, Second Edition</td>
+                </tr>
+                <tr>
+                    <td>Author: Steve Krug</td>
+                    <td>ISBN: 9780321344755</td>
+                </tr>
+            </table>
+            <br>
+        </section>
+        <section name="objectives">
+            <h2>Objectives:</h2>
+            <p>
+                Upon completion of this course students should be able to:
+                <ol>
+                    <li>Design and implement web sites using ASP.NET and HTML 5</li>
+                    <li>Understand the MVC design pattern</li>
+                    <li>Connect to a database.</li>
+                    <li>Create extensible and maintainable web sites.</li>
+                </ol>
+            </p>
+            <br>
+        </section>
+        <section name="abet_info">
+            <h2>ABET Student Learning Outcomes Addressed by this Course:</h2>
+            <ul>
+                <li>an ability to select and apply the knowledge, techniques, skills, and modern tools
+                    of the discipline to broadly-defined engineering technology activities;</li>
+                <li>an ability to design systems, components, or processes for broadly-defined
+                    engineering technology problems appropriate to program educational objectives;</li>
+            </ul>
+            <br>
+        </section>
+        <section name="grading">
+            <h2>Grading:</h2>
+            <p>The final grade will be determined from the following breakdown:<br>
+                Assignments, Quizzes, and Labs 60%; Mid-Term 20%; Final 20%<br><br>
+                The grade calculations will be as follows:<br>
+                90% + -&gt A; 80% + -&gt B; 70% + -&gt C; 60% + -&gt D; Less than 60% -> F
+            </p>
+            <br>
+        </section>
+        <section name="assignments">
+            <h2>Assignments:</h2>
+            <p>
+                Assignments are typically small programs that generally deal with implementing a
+                specific aspect within web development. The due date of all assignments will be
+                announced when they are assigned. Late assignments will be given a 20% penalty
+                for each day it is late.
+            </p>
+            <br>
+        </section>
+        <section name="tests_quizzes">
+            <h2>Tests/Quizzes:</h2>
+            <p>
+                There will be a mid-term and a final both of which will either be “take-home”
+                tests or administered through Canvas. “Take-home” tests will then be
+                demonstrated to the instructor for evaluation. Any quizzes will be announced at
+                least a week in advance.
+            </p>
+            <br>
+        </section>
+        <section name="cheating">
+            <h2>Cheating:</h2>
+            <p>
+                Academic dishonesty is defined as cheating, plagiarism or otherwise obtaining
+                grades under false pretenses. <em>Plagiarism</em> is defined as submitting the language,
+                ideas, thoughts or work of another as one's own; or assisting in the act of
+                plagiarism by allowing one's work to be used in this fashion. <em>Cheating</em> is defined
+                as, but not limited to: obtaining or providing unauthorized information during an
+                examination through verbal, visual or unauthorized use of books, notes, text and
+                other materials; obtaining or providing unauthorized information concerning all or
+                part of an examination prior to that examination; taking an examination for
+                another student or arranging for another person to take an exam in one's place;
+                altering test answers after submittal for grading; changing grades after grades
+                have been awarded; or altering other official academic records.
+                <br><br>
+                All academic dishonesty cases will be reported to the Vice President for Student
+                Affairs.
+            </p>
+            <br>
+        </section>
+        <section name="misc">
+            <h2>Miscellaneous Info:</h2>
+            <p>
+                If you have a physical, learning, sensory or psychological disability and require
+                accommodations, please let me know as soon as possible. You will need to
+                register with and, in most cases, provide documentation of your disability to
+                Disability Services. This can be done online through the Accommodations tile in
+                TECHweb, or by going directly to 
+                <a href="https://bachelor.accessiblelearning.com/OIT">https://bachelor.accessiblelearning.com/OIT</a>
+            </p>
+        </section>
     </body>
 </html>
