Validated HTML, Lab 2 Submission

--- a/Lab2/syllabus.html
+++ b/Lab2/syllabus.html
@@ -4,28 +4,28 @@
         <title>CST 465 Course Syllabus</title>
     </head>
     <body>
-        <section name="class_info">
+        <section id="class_info">
             <h1 ><strong>CST 465 Syllabus</strong></h1>
-            <table width="100%">
+            <table style="width: 100%;">
                 <tr>
-                    <td align="left">CST 465</td>
+                    <td style="text-align: left;">CST 465</td>
                     <td>Section 1</td>
                     <td colspan="2">Web Development with ASP.NET (3 credits)</td>
                 </tr>
                 <tr>
-                    <th align="left">Lecture</th>
+                    <th style="text-align: left;">Lecture</th>
                     <td>5:30 p.m. - 6:20 p.m.</td>
                     <td>M W</td>
                     <td>Remote</td>
                 </tr>
                 <tr>
-                    <th align="left">Lab</th>
+                    <th style="text-align: left;">Lab</th>
                     <td>6:00 p.m. - 8:50 p.m.</td>
                     <td>R</td>
                     <td>Remote</td>
                 </tr>
             </table>
-            <table width="100%">
+            <table style="width: 100%;">
                 <tr>
                     <td>Instructor: </td>
                     <td>Alan Wallace</td>
@@ -39,7 +39,7 @@
             </table>
             <br>
         </section>
-        <section name="course_materials">
+        <section id="course_materials">
             <h2>Course Materials:</h2>
             <p>Course materials will be made available via Canvas</p>
             <br>
@@ -53,13 +53,13 @@
             </p>
             <br>
         </section>
-        <section name="textbook">
+        <section id="textbook">
             <h2>Textbook:</h2>
             <p>
                 Texts Available Free Online to Students via O'Reilly for Higher Education <br>
                 <a href="https://www.oit.edu/library/find/a-z">https://www.oit.edu/library/find/a-z</a><br>
             </p>
-            <table width="100%">
+            <table style="width: 100%;">
                 <tr>
                     <td colspan="2">Pro ASP.NET Core 7, Tenth Edition</td>
                 </tr>
@@ -84,20 +84,20 @@
             </table>
             <br>
         </section>
-        <section name="objectives">
+        <section id="objectives">
             <h2>Objectives:</h2>
             <p>
                 Upon completion of this course students should be able to:
-                <ol>
-                    <li>Design and implement web sites using ASP.NET and HTML 5</li>
-                    <li>Understand the MVC design pattern</li>
-                    <li>Connect to a database.</li>
-                    <li>Create extensible and maintainable web sites.</li>
-                </ol>
             </p>
+            <ol>
+                <li>Design and implement web sites using ASP.NET and HTML 5</li>
+                <li>Understand the MVC design pattern</li>
+                <li>Connect to a database.</li>
+                <li>Create extensible and maintainable web sites.</li>
+            </ol>
             <br>
         </section>
-        <section name="abet_info">
+        <section id="abet_info">
             <h2>ABET Student Learning Outcomes Addressed by this Course:</h2>
             <ul>
                 <li>an ability to select and apply the knowledge, techniques, skills, and modern tools
@@ -107,16 +107,16 @@
             </ul>
             <br>
         </section>
-        <section name="grading">
+        <section id="grading">
             <h2>Grading:</h2>
             <p>The final grade will be determined from the following breakdown:<br>
                 Assignments, Quizzes, and Labs 60%; Mid-Term 20%; Final 20%<br><br>
                 The grade calculations will be as follows:<br>
-                90% + -&gt A; 80% + -&gt B; 70% + -&gt C; 60% + -&gt D; Less than 60% -> F
+                90% + -&gt; A; 80% + -&gt; B; 70% + -&gt; C; 60% + -&gt; D; Less than 60% -> F
             </p>
             <br>
         </section>
-        <section name="assignments">
+        <section id="assignments">
             <h2>Assignments:</h2>
             <p>
                 Assignments are typically small programs that generally deal with implementing a
@@ -126,7 +126,7 @@
             </p>
             <br>
         </section>
-        <section name="tests_quizzes">
+        <section id="tests_quizzes">
             <h2>Tests/Quizzes:</h2>
             <p>
                 There will be a mid-term and a final both of which will either be “take-home”
@@ -136,7 +136,7 @@
             </p>
             <br>
         </section>
-        <section name="cheating">
+        <section id="cheating">
             <h2>Cheating:</h2>
             <p>
                 Academic dishonesty is defined as cheating, plagiarism or otherwise obtaining
@@ -156,7 +156,7 @@
             </p>
             <br>
         </section>
-        <section name="misc">
+        <section id="misc">
             <h2>Miscellaneous Info:</h2>
             <p>
                 If you have a physical, learning, sensory or psychological disability and require
